# tiny-url

./: Cargo.toml  README.md  init.sql
config/: Settings.toml
src/: main.rs  settings.rs
src/api/: links.rs  mod.rs
templates/: index.html
