[package]
name = "tiny-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0.147", features = ["derive"]}  # 序列化
serde_json = {version = "1.0.87", optional = true}
nanoid = "0.4.0"  # 生成短链接 code