[package]
name = "tiny-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"  # web 框架
serde = {version = "1.0.147", features = ["derive"]}  # 序列化
serde_json = {version = "1.0.87", optional = true}
nanoid = "0.4.0"  # 生成短链接 code

lazy_static = "1.4.0"
tera = "1"  # web 前端加载
config = "0.13.2"  # 配置管理 - 环境隔离
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "mysql"]}